minor ui comment overlap bug

--- a/src/components/Post-module/Comments/index.css
+++ b/src/components/Post-module/Comments/index.css
@@ -1,10 +1,10 @@
 .comments-container form {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     width: 50%;
     gap: 10px;
     margin-bottom: 20px;
-    overflow: auto;
 }
 
 .comments-container input[type="text"] {
